Extended parameters functionality with options model which can easily be expanded if new parameters are required

--- a/sample/LiteDB.Identity.Sample/appsettings.json
+++ b/sample/LiteDB.Identity.Sample/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "IdentityLiteDB": "Filename=./Data/IdentityLiteDB.dll;Password=1234;Connection=Shared"
+  "LiteDbIdentityOptions": {
+    "ConnectionString": "Filename=./Data/IdentityLiteDB.dll;Password=1234;Connection=Shared"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
