Project updated to NET Standard 2.1, LiteDB 5.0.15, Identity Stores 6.0.13 for .NET 6

--- a/sample/LiteDB.Identity.Sample/LiteDB.Identity.Sample.csproj
+++ b/sample/LiteDB.Identity.Sample/LiteDB.Identity.Sample.csproj
@@ -1,15 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>aspnet-LiteDB.Identity.Sample-BA636D25-FD26-4137-B69D-8E86527C5A5A</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LiteDB" Version="5.0.8" />
-    <PackageReference Include="LiteDB.Identity" Version="1.0.3" />
+    <PackageReference Include="LiteDB" Version="5.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\LiteDB.Identity\LiteDB.Identity.csproj" />
   </ItemGroup>
 
 </Project>
