--- a/src/LiteDB.Identity/LiteDB.Identity.csproj
+++ b/src/LiteDB.Identity/LiteDB.Identity.csproj
@@ -1,14 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Description>ASP.NET Core Identity implementation for LiteDB database engine.</Description>
     <Company />
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/quicksln/LiteDB.Identity</PackageProjectUrl>
     <RepositoryUrl>https://github.com/quicksln/LiteDB.Identity</RepositoryUrl>
-    <PackageTags>Identity, LiteDB, AspNetCore, LiteDB Identity, AspNetCore Identity, Membership</PackageTags>
+    <PackageTags>aspnetcore, identity, membership, litedb</PackageTags>
     <Authors>Piotr Stola</Authors>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Copyright>MIT</Copyright>
+    <Title>LiteDB.Identity </Title>
+    <Version>1.0.6</Version>
+    <AssemblyVersion>1.0.6</AssemblyVersion>
+    <FileVersion>1.0.6</FileVersion>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -16,9 +23,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LiteDB" Version="5.0.8" />
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.13" />
   </ItemGroup>
 
 </Project>
