Project updated to NET Standard 2.1, .NET 7  Identity Stores 7.0.2

--- a/sample/LiteDB.Identity.Sample/appsettings.json
+++ b/sample/LiteDB.Identity.Sample/appsettings.json
@@ -1,13 +1,11 @@
 {
-  "LiteDbIdentityOptions": {
-    "ConnectionString": "Filename=./Data/IdentityLiteDB.dll;Password=1234;Connection=Shared"
+  "ConnectionStrings": {
+    "DefaultConnection": "Filename=./Data/IdentityLiteDB.dll;Password=1234;Connection=Shared"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
