--- a/sample/LiteDB.Identity.Sample/appsettings.Development.json
+++ b/sample/LiteDB.Identity.Sample/appsettings.Development.json
@@ -1,12 +1,8 @@
 {
-  "ConnectionStrings": {
-    "IdentityLiteDB": "Filename=./Data/IdentityLiteDB.dll;Password=1234;Connection=Shared"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   }
 }
